Clarify the ambiguity of the "more actions" dropdown.
Adds the word "More" to the dropdown toggle to clearly indicate
what the arrow is for. Also disables line-wrapping between the
primary action and its dropdown toggle. Removes the individual
hacks for the widths of various tables.

Change-Id: I74c03a9cd0655457f85332c9c7d31ef3ae15059e

--- a/horizon/templates/horizon/common/_data_table_row_actions.html
+++ b/horizon/templates/horizon/common/_data_table_row_actions.html
@@ -1,4 +1,4 @@
-{% load horizon %}
+{% load horizon i18n %}
 
 {% spaceless %} {# This makes sure whitespace doesn't affect positioning for dropdown. #}
 {% if row_actions|length > 1 %}
@@ -6,7 +6,8 @@
     {% for action in row_actions %}
         {% if forloop.first %}
           {% include "horizon/common/_data_table_row_action.html" %}
-          <a class="btn dropdown-toggle {{ action.class_string|safe }}" data-toggle="dropdown" href="#">
+          <a class="btn btn-small dropdown-toggle {{ action.class_string|safe }}" data-toggle="dropdown" href="#">
+            {% trans "More" %}
             <span class="caret"></span>
           </a>
           <ul class="dropdown-menu row_actions clearfix">
