make long tenant names look better
Change-Id: Ifd3bb8ba0a7a367e31794c7cc82bef40e2c83d20
Fixes: bug 1057137

--- a/openstack_dashboard/static/bootstrap/less/dropdowns.less
+++ b/openstack_dashboard/static/bootstrap/less/dropdowns.less
@@ -94,9 +94,7 @@
     font-weight: normal;
     line-height: @baseLineHeight;
     color: @gray;
-    white-space: nowrap;
-    overflow: hidden;
-    text-overflow:ellipsis;
+    word-wrap: break-word;
   }
 }
 
