Use default_if_none rather than default filter
Zero is a valid summation for a column, so only default to
a hyphen when a summation is explicitly None.

Change-Id: Ib523657ca46f9f2563ddb82cb2a3b64d9458979d

--- a/horizon/templates/horizon/common/_data_table.html
+++ b/horizon/templates/horizon/common/_data_table.html
@@ -43,7 +43,7 @@
           {% if forloop.first %}
           <td>{% trans "Summary" %}</td>
           {% else %}
-          <td>{{ column.get_summation|default:"&ndash;"}}</td>
+          <td>{{ column.get_summation|default_if_none:"&ndash;"}}</td>
           {% endif %}
         {% endfor %}
       </tr>
