Improves some UX details
Adds underline style to sortable column headers
in tables with more than one item.

Changes 'Click here to show only VNC' string
with 'Show only VNC' and adds underline style.

Substitute 'Unpause' with 'Resume' in Instances dropdown and
'Unpausing' with 'Resuming' in Task column on update.

Change-Id: I903722191d9c511b9961a666d0e644dbf87111b5
Fixes: Adds usability improvements
Bug: #1100418

--- a/openstack_dashboard/dashboards/project/instances/templates/instances/_detail_vnc.html
+++ b/openstack_dashboard/dashboards/project/instances/templates/instances/_detail_vnc.html
@@ -2,7 +2,7 @@
 
 <h3>{% trans "Instance VNC Console" %}</h3>
 {% if vnc_url %}
-<p class='alert alert-info'>{% blocktrans %}If VNC console is not responding to keyboard input: click the grey status bar below.{% endblocktrans %} <a href="{{ vnc_url }}">{% trans "Click here to show only VNC" %}</a></p>
+<p class='alert alert-info'>{% blocktrans %}If VNC console is not responding to keyboard input: click the grey status bar below.{% endblocktrans %} <a href="{{ vnc_url }}" style="text-decoration: underline">{% trans "Show only VNC" %}</a></p>
 <iframe id="vnc_console" src="{{ vnc_url }}" style="width:100%;height:100%"></iframe>
 <script type="text/javascript">
     var fix_height = function() {
