--- a/openstack_dashboard/static/dashboard/less/horizon.less
+++ b/openstack_dashboard/static/dashboard/less/horizon.less
@@ -389,6 +389,7 @@ a.current_item:hover h3, a.current_item:hover h4 {
 }
 .table th.header:hover {
   background-color: #e8e8e8;
+  text-decoration: underline;
 }
 .table tbody td.anchor a {
   display: block;
