--- a/openstack_dashboard/dashboards/admin/users/templates/users/index.html
+++ b/openstack_dashboard/dashboards/admin/users/templates/users/index.html
@@ -3,9 +3,7 @@
 {% block title %}Users{% endblock %}
 
 {% block page_header %}
-  {% url horizon:admin:users:index as refresh_link %}
-  {# to make searchable false, just remove it from the include statement #}
-  {% include "horizon/common/_page_header.html" with title=_("Users") refresh_link=refresh_link searchable="true" %}
+  {% include "horizon/common/_page_header.html" with title=_("Users") %}
 {% endblock page_header %}
 
 {% block main %}
