Allow image filtering based on image ownership
Uses buttons above the images list to allow filtering into categories:
project, "official", shared, public.

Adds a FixedFilterAction that creates a button group on top of the
datatable. Supports server-side and client-side filtering.

Implements blueprint organised-images-display.

Change-Id: I87f6cf4dd7d7397ad8c23ebadc8bf293d0bad998

--- a/openstack_dashboard/static/dashboard/less/horizon.less
+++ b/openstack_dashboard/static/dashboard/less/horizon.less
@@ -545,7 +545,7 @@ table form {
     min-width: 400px;
 }
 
-.table_actions .table_search {
+.table_actions .table_search, .table_actions .table_filter {
     display: inline-block;
 }
 
@@ -568,9 +568,18 @@ table form {
   min-width: 0;
 }
 
-.table_header .table_actions a, .table_header .table_actions button {
+.table_header .table_actions a, .table_header .table_actions > button {
   display: inline-block;
   float: none;
+}
+
+.table_header .table_filter {
+  vertical-align: bottom;
+  margin-right: 20px;
+}
+
+.table_header .table_filter i {
+  vertical-align: middle;
 }
 
 .table_actions form {
