Support adding/removing instance security groups
Changes the edit instance dialog into a workflow, and adds a step
"Edit security groups" that reuses the admin:project add/remove user
dialog.

Changes:
- Allow "roles" dropdown to be hidden.
- Moved project members template into horizon/common.
- Moved workflows.py to workflows/create_instance.py so I could add
  a workflows/update_instance.py.
- Moved hardcoded UI text from js to template/workflow definition.
- Made filter-fields use placeholder attributes.
- Fixed the #add_remove being added to the URL bar when adding/removing
  members.
- Fixes the project members modal getting stuck displaying the lists
  from the first invocation of the modal and never updating
  (try clicking "modify users" for different projects).

Implements blueprint add-security-group-to-instance

Change-Id: If2939e05c92ac50bfc3c6f0112bdfc1785d9fb4e

--- a/openstack_dashboard/static/dashboard/less/horizon.less
+++ b/openstack_dashboard/static/dashboard/less/horizon.less
@@ -1416,7 +1416,7 @@ label.log-length {
   .no_results {
     border: 1px solid #DDD;
     padding: 10px;
-    color: #08C;
+    opacity: 0.5;
   }
 
   /* Role dropdown menus */
