Fix hogan js templates in IE8
Fixes: bug #1110226

Incorrect usage of the templating framework
as the html should be provided and not text? Weird
that it worked in other browsers though.

As part of the fix hogan has also been updated to
the latest official version 2.0.0 which may prevent
other bugs.

Upstream bug has been filed here:
https://github.com/twitter/hogan.js/issues/130

Change-Id: Id5b6cef85dab1f9a497a525f9c065b410c52b38f

--- a/horizon/templates/horizon/_scripts.html
+++ b/horizon/templates/horizon/_scripts.html
@@ -17,7 +17,7 @@
 
 <script src="{{ STATIC_URL }}bootstrap/js/bootstrap.min.js" type="text/javascript" charset="utf-8"></script>
 
-<script src="{{ STATIC_URL }}horizon/lib/hogan-1.0.5.min.js" type="text/javascript" charset='utf-8'></script>
+<script src="{{ STATIC_URL }}horizon/lib/hogan-2.0.0.js" type="text/javascript" charset='utf-8'></script>
 
 <script src='{{ STATIC_URL }}horizon/js/horizon.communication.js' type='text/javascript' charset='utf-8'></script>
 <script src='{{ STATIC_URL }}horizon/js/horizon.cookies.js' type='text/javascript' charset='utf-8'></script>
