Allow users to specify the order of VNICs of an instance.
Enable to order VNICs. It allows to choose your preferred network to eth0, eth1
and so on.
Added jQuery UI for implementing drag and drop sort function.

implements bp quantum-vnic-ordering

Change-Id: I29cba9004d7170af2be3a6645c2217d7a5b0f6ae

--- a/horizon/templates/horizon/_scripts.html
+++ b/horizon/templates/horizon/_scripts.html
@@ -13,6 +13,7 @@
 <script src="{{ STATIC_URL }}horizon/lib/spin.jquery.js" type="text/javascript" charset="utf-8"></script>
 <script src='{{ STATIC_URL }}horizon/lib/json2.js' type='text/javascript' charset="utf-8"></script>
 <script src="{{ STATIC_URL }}horizon/lib/underscore/underscore-min.js" type="text/javascript" charset="utf-8"></script>
+<script src="{{ STATIC_URL }}horizon/lib/jquery/jquery-ui-1.9.2.custom.min.js" type="text/javascript" charset="utf-8"></script>
 
 <script src="{{ STATIC_URL }}bootstrap/js/bootstrap.min.js" type="text/javascript" charset="utf-8"></script>
 
