Change the first letter of routers tab header and html title from lowercase to uppercase.
Routers tab header and html title of both routers index page and
create page missing the first uppercase letter, so it needs to be
changed into uppercase to keep with consistency other tabs.

Change-Id: I83b33e061f2b1aae33e255def854cc1b0c44371e
Fixes: bug #1112589

--- a/openstack_dashboard/dashboards/admin/routers/templates/routers/create.html
+++ b/openstack_dashboard/dashboards/admin/routers/templates/routers/create.html
@@ -1,9 +1,9 @@
 {% extends 'base.html' %}
 {% load i18n %}
-{% block title %}Create router{% endblock %}
+{% block title %}Create Router{% endblock %}
 
 {% block page_header %}
-  {% include "horizon/common/_page_header.html" with title=_("Create a router") %}
+  {% include "horizon/common/_page_header.html" with title=_("Create a Router") %}
 {% endblock page_header %}
 
 {% block main %}
