--- a/openstack_dashboard/dashboards/project/routers/templates/routers/create.html
+++ b/openstack_dashboard/dashboards/project/routers/templates/routers/create.html
@@ -1,9 +1,9 @@
 {% extends 'base.html' %}
 {% load i18n %}
-{% block title %}Create router{% endblock %}
+{% block title %}Create Router{% endblock %}
 
 {% block page_header %}
-  {% include "horizon/common/_page_header.html" with title=_("Create a router") %}
+  {% include "horizon/common/_page_header.html" with title=_("Create a Router") %}
 {% endblock page_header %}
 
 {% block main %}
