Fixes the width of the error box on the login form.
Change-Id: I51869834bfef37be362eaa42f67b5066fad88553

--- a/openstack_dashboard/static/dashboard/less/horizon.less
+++ b/openstack_dashboard/static/dashboard/less/horizon.less
@@ -130,13 +130,18 @@ body {
   -webkit-background-clip: padding-box;
   -moz-background-clip: padding-box;
   background-clip: padding-box;
-}
 
-#splash .login input {
-  width: 350px;
-}
-#splash .login select {
-  width: 360px;
+  form {
+    .error {
+      width: 100%;
+    }
+    input {
+      width: 350px;
+    }
+    select {
+      width: 360px;
+    }
+  }
 }
 
 #splash .help-block {
