--- a/openstack_dashboard/dashboards/project/access_and_security/templates/access_and_security/security_groups/detail.html
+++ b/openstack_dashboard/dashboards/project/access_and_security/templates/access_and_security/security_groups/detail.html
@@ -7,5 +7,5 @@
 {% endblock page_header %}
 
 {% block main %}
-  {% include "project/access_and_security/security_groups/_edit_rules.html" %}
+  {{ table.render }}
 {% endblock %}
