Some text in html are not translatable, this cleans-up some of those files.
Fixes bug 1123612.

Change-Id: I012042e20abc22e7a1f01cd9650adedfa86ca227

--- a/openstack_dashboard/dashboards/project/access_and_security/templates/access_and_security/security_groups/create.html
+++ b/openstack_dashboard/dashboards/project/access_and_security/templates/access_and_security/security_groups/create.html
@@ -1,6 +1,6 @@
 {% extends 'base.html' %}
 {% load i18n %}
-{% block title %}Create Security Group{% endblock %}
+{% block title %}{% trans "Create Security Group" %}{% endblock %}
 
 {% block page_header %}
   {% include "horizon/common/_page_header.html" with title=_("Create Security Group") %}
