--- a/openstack_dashboard/dashboards/project/access_and_security/templates/access_and_security/index.html
+++ b/openstack_dashboard/dashboards/project/access_and_security/templates/access_and_security/index.html
@@ -1,6 +1,6 @@
 {% extends 'base.html' %}
 {% load i18n %}
-{% block title %}Access &amp; Security{% endblock %}
+{% block title %}{% trans "Access &amp; Security" %}{% endblock %}
 
 {% block page_header %}
   {% include "horizon/common/_page_header.html" with title=_("Access &amp; Security") %}
