--- a/openstack_dashboard/dashboards/project/access_and_security/templates/access_and_security/security_groups/edit_rules.html
+++ b/openstack_dashboard/dashboards/project/access_and_security/templates/access_and_security/security_groups/edit_rules.html
@@ -1,6 +1,6 @@
 {% extends 'base.html' %}
 {% load i18n %}
-{% block title %}Edit Security Group Rules{% endblock %}
+{% block title %}{% trans "Edit Security Group Rules" %}{% endblock %}
 
 {% block page_header %}
   {% include "horizon/common/_page_header.html" with title=_("Edit Security Group Rules") %}
