--- a/openstack_dashboard/dashboards/project/containers/templates/containers/index.html
+++ b/openstack_dashboard/dashboards/project/containers/templates/containers/index.html
@@ -1,6 +1,6 @@
 {% extends 'base.html' %}
 {% load i18n %}
-{% block title %}Containers{% endblock %}
+{% block title %}{% trans "Containers" %}{% endblock %}
 
 {% block page_header %}
   <div class='page-header'>
