--- a/openstack_dashboard/dashboards/project/routers/templates/routers/create.html
+++ b/openstack_dashboard/dashboards/project/routers/templates/routers/create.html
@@ -1,6 +1,6 @@
 {% extends 'base.html' %}
 {% load i18n %}
-{% block title %}Create Router{% endblock %}
+{% block title %}{% trans "Create Router" %}{% endblock %}
 
 {% block page_header %}
   {% include "horizon/common/_page_header.html" with title=_("Create a Router") %}
