--- a/horizon/templates/horizon/common/_data_table_table_actions.html
+++ b/horizon/templates/horizon/common/_data_table_table_actions.html
@@ -16,7 +16,7 @@
         {% if action.method != "GET" %}
             <button {{ action.attr_string|safe }} name="action" value="{{ action.get_param_name }}" type="submit">{% if action.handles_multiple %}{{ action.verbose_name_plural }}{% else %}{{ action.verbose_name }}{% endif %}</button>
         {% else %}
-            <a href='{{ action.get_link_url }}' {{ action.attr_string|safe }}>{{ action.verbose_name }}</a>
+            <a href='{{ action.get_link_url }}' title='{{ action.verbose_name }}' {{ action.attr_string|safe }}>{{ action.verbose_name }}</a>
         {% endif %}
     {% endif %}
 {% endfor %}
