--- a/openstack_dashboard/static/dashboard/less/horizon.less
+++ b/openstack_dashboard/static/dashboard/less/horizon.less
@@ -564,11 +564,56 @@ table form {
   margin-left: 0;
 }
 
+.table_actions {
+    .btn-icon(@x, @y, @icons: "/static/bootstrap/img/glyphicons-halflings.png") {
+        padding-left: 23px;
+        position: relative;
+
+        &:before {
+            display: inline-block;
+            content: "";
+            width: 18px;
+            height: 20px;
+            margin-top: 1px;
+            *margin-right: .3em;
+            line-height: 14px;
+            background-image: url(@icons);
+            background-position: @x @y;
+            background-repeat: no-repeat;
+            position: absolute;
+            top: 0px;
+            left: 0px;
+        }
+    }
+
+    .btn-icon-danger(@x, @y) {
+      .btn-icon(@x, @y, "/static/bootstrap/img/glyphicons-halflings-white.png");
+    }
+
+    a.btn-create, a.btn-launch {
+      .btn-icon(-403px, -92px);
+    }
+
+    a.btn-download {
+      .btn-icon(-91px, -19px);
+    }
+
+    a.btn-upload {
+      .btn-icon(-283px, -92px);
+    }
+
+    button.btn-delete, button.btn-terminate {
+      .btn-icon-danger(-451px, 5px);
+    }
+
+}
+
 .table_header .table_actions {
   min-width: 0;
 }
 
-.table_header .table_actions a, .table_header .table_actions > button {
+.table_header .table_actions a, .table_header .table_actions > button,
+.table_header .table_actions .table_search button {
   display: inline-block;
   float: none;
 }
