--- a/openstack_dashboard/dashboards/project/network_topology/templates/network_topology/index.html
+++ b/openstack_dashboard/dashboards/project/network_topology/templates/network_topology/index.html
@@ -20,7 +20,7 @@ div.network .device:hover div.port {
 }
 </style>
 <noscript>
-{%trans "This pane needs javascript support." %}
+{% trans "This pane needs javascript support." %}
 </noscript>
 <div class="launchButtons">
 <a href="{% url horizon:project:instances:launch %}" id="instances__action_launch" class="btn btn-small btn-launch ajax-modal">{%trans "Launch Instance" %}</a>
@@ -30,6 +30,7 @@ div.network .device:hover div.port {
 
 <div id="topologyCanvas">
     <div class="networks"></div>
+    <div class="nodata">{% blocktrans %}There are no networks, routers, or connected instances to display. {% endblocktrans %}</div>
 </div>
 <span data-networktopology="{% url horizon:project:network_topology:json %}" id="networktopology"></span>
 {% endblock %}
