--- a/openstack_dashboard/dashboards/admin/routers/templates/routers/_detail_overview.html
+++ b/openstack_dashboard/dashboards/admin/routers/templates/routers/_detail_overview.html
@@ -1,11 +1,11 @@
 {% load i18n sizeformat parse_date %}
 
-<h3>{% trans "Router Overview" %}: {{router.display_name }}</h3>
+<h3>{% trans "Router Overview" %}: {{router.name }}</h3>
 
 <div class="info detail">
   <dl>
     <dt>{% trans "Name" %}</dt>
-    <dd>{{ router.display_name }}</dd>
+    <dd>{{ router.name|default:"None" }}</dd>
     <dt>{% trans "ID" %}</dt>
     <dd>{{ router.id }}</dd>
     <dt>{% trans "Status" %}</dt>
