--- a/openstack_dashboard/dashboards/admin/routers/templates/routers/ports/_create.html
+++ b/openstack_dashboard/dashboards/admin/routers/templates/routers/ports/_create.html
@@ -2,7 +2,7 @@
 {% load i18n %}
 
 {% block form_id %}add_interface_form{% endblock %}
-{% block form_action %}{% url horizon:project:routers:addinterface router.id %}
+{% block form_action %}{% url horizon:admin:routers:addinterface router.id %}
 {% endblock %}
 
 {% block modal-header %}{% trans "Add Interface" %}{% endblock %}
@@ -21,5 +21,5 @@
 
 {% block modal-footer %}
   <input class="btn btn-primary pull-right" type="submit" value="{% trans "Add interface" %}" />
-  <a href="{% url horizon:project:routers:index %}" class="btn secondary cancel close">{% trans "Cancel" %}</a>
+  <a href="{% url horizon:admin:routers:detail router.id %}" class="btn secondary cancel close">{% trans "Cancel" %}</a>
 {% endblock %}
