Allow non-admin users to clear router gateway properly
Fixes bug 1131193

In Grizzly-3 milestone, quantum made a change to allow regular users
to set non-owned external network as router gateway, but Quantum
router support cannot handle it, particularily non-admin user cannot
clear router gateway. This means non-admin cannot delete a router as
a result. In addition, there is no way for non-admin users to check
if router gateway is set or not since a non-admin user cannot see
a router gateway.

To address the above issues, this commit does the following changes:
- Display "external gateway info" in router table and detail to allow
  non-admin users to check if a router is connected to an external
  network (i.e., a router has a default gateway).
- Move "Set/Clear Gateway" button to router table and Set/Clear
  button is displayed based on an existence of router gateway.
- Move "Set/Clear Gateway" button in Admin panel in the same way
  to keep consistency with Project panel.

Change-Id: Ib096d5e40c88b8a605ad8aae26d1f5cf7fd745e6

--- a/openstack_dashboard/dashboards/admin/routers/templates/routers/_detail_overview.html
+++ b/openstack_dashboard/dashboards/admin/routers/templates/routers/_detail_overview.html
@@ -8,8 +8,15 @@
     <dd>{{ router.name|default:"None" }}</dd>
     <dt>{% trans "ID" %}</dt>
     <dd>{{ router.id }}</dd>
+    <dt>{% trans "Project ID" %}</dt>
+    <dd>{{ router.tenant_id }}</dd>
     <dt>{% trans "Status" %}</dt>
     <dd>{{ router.status|capfirst }}</dd>
+    {% if router.external_gateway_info %}
+    <dt>{% trans "External Gateway Information" %}</dt>
+    <dd>{% trans "Connected External Network" %}:
+      {{ router.external_gateway_info.network }}</dd>
+    {% endif %}
   </dl>
 </div>
 
