Support multiple role selection in projects
Horizon currently overwrites existing roles when saving project
membership. The backend was only initialising the form with the
first role of each user, so when the form was submitted any other
roles on *all* users were removed.

Changes:
- Fix backend to pass through all roles
- Keep role dropdown open on click, clicks add a tick to a role
- Show the first two roles on the dropdown label, add a "..." for
   three or more.

Fixes bug #1081374.

Change-Id: Iaf64afc4c50d4d24d6acb529a6e810a0ba154505

--- a/openstack_dashboard/static/dashboard/less/horizon.less
+++ b/openstack_dashboard/static/dashboard/less/horizon.less
@@ -1453,10 +1453,20 @@ label.log-length {
     -moz-box-shadow: none;
     box-shadow: none;
     z-index: 99999;
+    i {
+      opacity: 0;
+    }
 
     &:hover {
       background-color: #CDCDCD;
     }
+    &.selected i {
+      opacity: 1;
+    }
+  }
+  .dropdown-menu.role_dropdown {
+    right: 0;
+    left: auto;
   }
   .nav .role_options {
     float: right;
