--- a/openstack_dashboard/dashboards/project/loadbalancers/templates/loadbalancers/addvip.html
+++ b/openstack_dashboard/dashboards/project/loadbalancers/templates/loadbalancers/addvip.html
@@ -1,9 +1,9 @@
 {% extends 'base.html' %}
 {% load i18n %}
-{% block title %}{% trans "Specify Vip" %}{% endblock %}
+{% block title %}{% trans "Specify VIP" %}{% endblock %}
 
 {% block page_header %}
-  {% include "horizon/common/_page_header.html" with title=_("Specify Vip") %}
+  {% include "horizon/common/_page_header.html" with title=_("Specify VIP") %}
 {% endblock page_header %}
 
 {% block main %}
