Update Horizon for Django 1.5 compatibility
Changes made:
- Changed template url tags: {% url myview %} to {% url myview %}
- Import json instead of django.utils.simplejson
- Import django.utils.encoding.force_unicode instead of
  django.utils.translation.force_unicode
- Fixed error in tables/base.py for CheckboxInput, pass a callable
  check_test. Django 1.5 does not silently fail on this now.
- Set SECRET_KEY in test/settingspy, Django 1.5 refuse to start if it
  is not set.
- Added notes about ALLOWED_HOSTS when running Horizon in Production

Fixes bug 1147329

Change-Id: I6ac1e81498f41141dea99760922991feb310a326

--- a/horizon/templates/horizon/_scripts.html
+++ b/horizon/templates/horizon/_scripts.html
@@ -1,7 +1,8 @@
 {% load compress %}
+{% load url from future %}
 
 {% comment %} Django's JavaScript i18n Implementation {% endcomment %}
-<script type="text/javascript" src="{% url horizon:jsi18n 'horizon' %}"></script>
+<script type="text/javascript" src="{% url 'horizon:jsi18n' 'horizon' %}"></script>
 
 {% comment %} Compress jQuery, Plugins, Bootstrap, Hogan.js and Horizon-specific JS. {% endcomment %}
 {% compress js %}
