--- a/openstack_dashboard/dashboards/project/access_and_security/templates/access_and_security/floating_ips/_allocate.html
+++ b/openstack_dashboard/dashboards/project/access_and_security/templates/access_and_security/floating_ips/_allocate.html
@@ -1,9 +1,10 @@
 {% extends "horizon/common/_modal_form.html" %}
 
 {% load horizon i18n %}
+{% load url from future %}
 
 {% block form_id %}associate_floating_ip_form{% endblock %}
-{% block form_action %}{% url horizon:project:access_and_security:floating_ips:allocate %}{% endblock %}
+{% block form_action %}{% url 'horizon:project:access_and_security:floating_ips:allocate' %}{% endblock %}
 
 {% block modal-header %}{% trans "Allocate Floating IP" %}{% endblock %}
 
@@ -29,5 +30,5 @@
 
 {% block modal-footer %}
   <input class="btn btn-primary pull-right {% if usages.floating_ips.used >= usages.floating_ips.quota %}disabled" type="button"{% else %}" type="submit"{% endif %} value="{% trans "Allocate IP" %}" />
-  <a href="{% url horizon:project:access_and_security:index %}" class="btn secondary cancel close">{% trans "Cancel" %}</a>
+  <a href="{% url 'horizon:project:access_and_security:index' %}" class="btn secondary cancel close">{% trans "Cancel" %}</a>
 {% endblock %}
