Query a period of time for usage summary
Allows the user to pick a range of time
to query services usage data.

Fallback mode: the user will have to input
dates by hand if JavaScript is disabled.

Change-Id: I4cf4d4fd56fd450743b9d624dc066d6ed74df881
Fixes: bug #1102448

--- a/openstack_dashboard/static/dashboard/less/horizon.less
+++ b/openstack_dashboard/static/dashboard/less/horizon.less
@@ -724,6 +724,19 @@ form label {
   width: 150px;
 }
 
+.datepicker {
+    margin-top: 10px;
+}
+
+.datepicker input {
+    width: 65px;
+    margin-right: 10px;
+}
+
+.datepicker .btn {
+    margin-right: 10px;
+}
+
 form.horizontal .form-field {
     float: left;
   }
