--- a/horizon/templates/horizon/common/_usage_summary.html
+++ b/horizon/templates/horizon/common/_usage_summary.html
@@ -2,18 +2,19 @@
 
 <div class="usage_info_wrapper">
   <form action="" method="get" id="date_form" class="form-horizontal">
-    <h3>{% trans "Select a month to query its usage" %}: </h3>
-    <div class="form-row">
-      {{ form.month }}
-      {{ form.year }}
+    <h3>{% trans "Select a period of time to query its usage" %}: </h3>
+    <div class="datepicker">
+      <span>{% trans "From" %}: {{ form.start }} </span>
+      <span>{% trans "To" %}: {{ form.end }} </span>
       <button class="btn btn-small" type="submit">{% trans "Submit" %}</button>
+      <small>{% trans "The date should be in YYYY-mm-dd format." %}</small>
     </div>
   </form>
 
   <p id="activity">
     <span><strong>{% trans "Active Instances" %}:</strong> {{ usage.summary.instances|default:'-' }}</span>
     <span><strong>{% trans "Active RAM" %}:</strong> {{ usage.summary.memory_mb|mbformat|default:'-' }}</span>
-    <span><strong>{% trans "This Month's VCPU-Hours" %}:</strong> {{ usage.summary.vcpu_hours|floatformat:2|default:'-' }}</span>
-    <span><strong>{% trans "This Month's GB-Hours" %}:</strong> {{ usage.summary.disk_gb_hours|floatformat:2|default:'-' }}</span>
+    <span><strong>{% trans "This Period's VCPU-Hours" %}:</strong> {{ usage.summary.vcpu_hours|floatformat:2|default:'-' }}</span>
+    <span><strong>{% trans "This Period's GB-Hours" %}:</strong> {{ usage.summary.disk_gb_hours|floatformat:2|default:'-' }}</span>
   </p>
 </div>
