Fix the "Updated" field in the Image Detail page
The "Updated" field in the Image Detail page always says
"Never Updated". It appears that the code is looking for
"updated_app" instead of "updated_at".

Fixes bug #1168613

Change-Id: I2582e76f80cfd37c46910b1d419489268bddb0f3

--- a/openstack_dashboard/dashboards/project/images_and_snapshots/templates/images_and_snapshots/images/_detail_overview.html
+++ b/openstack_dashboard/dashboards/project/images_and_snapshots/templates/images_and_snapshots/images/_detail_overview.html
@@ -19,7 +19,7 @@
     <dt>{% trans "Created" %}</dt>
     <dd>{{ image.created_at|default:_("Unknown") }}</dd>
     <dt>{% trans "Updated" %}</dt>
-    <dd>{{ image.updated_app|default:_("Never updated") }}</dd>
+    <dd>{{ image.updated_at|default:_("Never updated") }}</dd>
   </dl>
 </div>
 
