Expose "protected" attribute of images.
Adds support for displaying and setting the protected
attribute on images.  If images are protected, delete
actions are not enabled

Fixes bug 1168067

Change-Id: Iedf4fa8840c713333679762ac4fc06fd0cf1a322

--- a/openstack_dashboard/dashboards/project/images_and_snapshots/templates/images_and_snapshots/images/_detail_overview.html
+++ b/openstack_dashboard/dashboards/project/images_and_snapshots/templates/images_and_snapshots/images/_detail_overview.html
@@ -14,6 +14,8 @@
     <dd>{{ image.status|default:_("Unknown")|title }}</dd>
     <dt>{% trans "Public" %}</dt>
     <dd>{{ image.is_public }}</dd>
+    <dt>{% trans "Protected" %}</dt>
+    <dd>{{ image.protected }}</dd>
     <dt>{% trans "Checksum" %}</dt>
     <dd>{{ image.checksum }}</dd>
     <dt>{% trans "Created" %}</dt>
