Refactored the templates code
Created generic template _workflow_base.html
in horizon/templates/horizon/common folder
with 'workflow.name' to replace multiple nearly
identical templates with different titles.

Implements blueprint dry-templates

Change-Id: Ieb14e263381020ed6604149ff9295f8cc814a9e6

--- a/horizon/templates/horizon/common/_workflow_base.html
+++ b/horizon/templates/horizon/common/_workflow_base.html
@@ -1,9 +1,9 @@
 {% extends 'base.html' %}
 {% load i18n %}
-{% block title %}{% trans "Associate Floating IP" %}{% endblock %}
+{% block title %}{% trans workflow.name %}{% endblock %}
 
 {% block page_header %}
-  {% include "horizon/common/_page_header.html" with title=_("Associate Floating IP") %}
+  {% include "horizon/common/_page_header.html" with title=workflow.name %}
 {% endblock page_header %}
 
 {% block main %}
