Region selector enabling multi-region support.
This patch adds a region selector dropdown
at the top of both the Project and Admin dashboards if
more than one region is available in the user's service
catalog.  The user is allowed to choose from any region
available in the service catalog. By selecting a region,
the user is limited to accessing endpoints in that
region only as long as the go through api.base.url_for

If there are more than one endpoint for a service in a
region the first in the catalog is returned.  Further
work on the blueprint will handle that complexity.

Supporting Keystone v2.0 and v3 catalog formats.

Partially implements blueprint multiple-service-endpoints

Change-Id: I1ab6539c7c5f4b1ae4b1716059370e86b6ca4d2e

--- a/horizon/templates/horizon/common/_sidebar.html
+++ b/horizon/templates/horizon/common/_sidebar.html
@@ -32,5 +32,23 @@
   </div>
   {% endif %}
 
+  {% with num_of_regions=request.user.available_services_regions|length %}
+  {% if num_of_regions > 1 %}
+  <div id="services_region_switcher" class="dropdown switcher_bar" tabindex="1">
+    <a class="dropdown-toggle" data-toggle="dropdown" href="#services_region_switcher">
+        <h4>{% trans "Managing Region" %}</h4>
+        <h3>{{ request.user.services_region }}</h3>
+    </a>
+
+    <ul id="services_regions_list" class="dropdown-menu">
+        <li class='divider'></li>
+        {% for region in request.user.available_services_regions %}
+        <li><a href="{% url 'switch_services_region' region %}?next={{ request.horizon.panel.get_absolute_url }}">{{ region }}</a></li>
+        {% endfor %}
+    </ul>
+  </div>
+  {% endif %}
+  {% endwith %}
+
   {% horizon_dashboard_nav %}
 </div>
