Fixing Floating IP capitalization bug
Fixes: bug #1177955

Change-Id: Ie0cdd39427d7435c4cf943079ac0ea5d660ce151

--- a/openstack_dashboard/dashboards/project/access_and_security/templates/access_and_security/floating_ips/_allocate.html
+++ b/openstack_dashboard/dashboards/project/access_and_security/templates/access_and_security/floating_ips/_allocate.html
@@ -16,7 +16,7 @@
 </div>
 <div class="right">
     <h3>{% trans "Description:" %}</h3>
-    <p>{% trans "Allocate a floating IP from a given floating ip pool." %}</p>
+    <p>{% trans "Allocate a floating IP from a given floating IP pool." %}</p>
 
     <h3>{% trans "Project Quotas" %}</h3>
     <div class="quota_title">
