--- a/openstack_dashboard/dashboards/project/volumes/templates/volumes/_create.html
+++ b/openstack_dashboard/dashboards/project/volumes/templates/volumes/_create.html
@@ -16,7 +16,7 @@
   </div>
 
   <div class="right quota-dynamic">
-    {% include "project/volumes/_quota.html" with usages=usages %}
+    {% include "project/volumes/_limits.html" with usages=usages %}
   </div>
 {% endblock %}
 
