--- a/horizon/templates/horizon/common/_data_table_table_actions.html
+++ b/horizon/templates/horizon/common/_data_table_table_actions.html
@@ -1,3 +1,4 @@
+{% load i18n %}
 <div class="table_actions clearfix">
 {% block table_filter %}
     {% if filter.filter_type == 'fixed' %}
@@ -9,7 +10,7 @@
     {% elif filter.filter_type == 'query' %}
     <div class="table_search">
         <input class="span3 example" value="{{ filter.filter_string|default:'' }}" type="text" name="{{ filter.get_param_name }}" />
-        <button type="submit" {{ filter.attr_string|safe }}>Filter</button>
+        <button type="submit" {{ filter.attr_string|safe }}>{% trans "Filter" %}</button>
     </div>
     {% endif %}
 {% endblock table_filter %}
